# equities-trader-bot

./: .codeclimate.yml  .gitignore  1.7  Dockerfile  README.md  setup.cfg
.github/: release-drafter.yml
examples/: getting_started.ipynb  time_series_forecasting.ipynb
pedrino/: _constants.py  client.py  config.py  config.yaml  database.py  get_all_stocks.py  get_ticker_aggregates.py
pedrino/data_utils/: collect.py  exchanges_utils.py  financials_utils.py  loading.py  quote_utils.py  saving.py  ticker_details_utils.py  trade_utils.py
pedrino/polygon_utils/: aggregates.py  exchanges.py  news.py  quotes.py  stock_financials_vx.py  ticker_details.py  tickers.py
scripts/: collect_all.py  update_base_stocks.sh
tests/unit/: test_polygon_tickers.py
tests/unit/data_utils/: test_exchanges_utils.py  test_financial_utils.py  test_ticker_details_utils.py  test_trade_utils.py
tests/unit/polygon_utils/: test_aggregates.py  test_ticker_details.py  test_tickers.py
