[metadata]
name = pedrino
description = ML-supported trading bot utilities.
long_description = file: README.md
author = Pedro Junior Vicente Valdez
author_email = vicentepedrojr@gmail.com
url = https://github.com/pedrojrv/equities-trader-bot
keywords = [trading, equities, ml-based trading, trading bot]
project_urls =
    GitHub = https://github.com/pedrojrv/equities-trader-bot

version = 0.0.1

[options]
python_requires = >= 3.9, < 3.10
include_package_data = True
packages = find:
install_requires =
    pandas
    plotly
    numpy
    matplotlib
    scikit-learn
    polygon-api-client
    torch
    pytorch-lightning
    pytorch-forecasting
    tensorflow

[options.packages.find]
include = pedrino*

[options.extras_require]
tests =
    pytest
    flake8
    flake8-docstrings

docs =
    sphinx >= 4
    sphinx-rtd-theme

dev =
    notebook

[options.entry_points]
console_scripts =
    pedrino-update-base = pedrino.get_all_stocks:main

[flake8]
max_line_length = 120
ignore = E402, E226, W503, W605, D104
exclude =
    venv
    .eggs
    build
# pydocstyle configuration for flake8-docstrings
docstring-convention = google
docstring-match-dir = src
per-file-ignores =
    tests/*: D100, D205, D212, D415

[pycodestyle]
max-line-length = 120
